[package]
categories = ["game-development", "gui"]
description = "egui integration for Tetra"
documentation = "https://docs.rs/egui-tetra2"
edition = "2021"
keywords = ["gamedev", "gui", "egui", "tetra", "egui-tetra"]
license = "MIT OR Apache-2.0"
name = "egui-tetra2"
repository = "https://github.com/trevyn/egui-tetra2"
version = "0.5.0"

[dependencies]
copypasta = "0.10"
egui = "0.28"
open = "5"
tetra = {version = "0.8", default-features = false}

[dev-dependencies]
egui_extras = {version = "0.28", features = ["syntect", "all_loaders"]} 
egui_plot = "0.28" 
image = {version = "0.25", features = ["png"]} 
tetra = "0.8" # include default features for testing

[target.'cfg(windows)'.dev-dependencies]
tetra = {version = "0.8", features = ["sdl2_bundled"]}
